apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__filter_basic_query-4.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_policies: &extracted_policies,\n    successful_policies: [\"profile\".to_string(), \"read user\".to_string(),\n                    \"read username\".to_string()].into_iter().collect(),\n    result: doc,\n    paths,\n}"
---
query:

        {
            topProducts {
                type
                internal
            }

            me {
                id
                name
            }
        }
        
extracted_policies: {"internal", "profile", "read user", "read username"}
successful policies: ["profile", "read user", "read username"]
filtered:
query {
  topProducts {
    type
  }
  me {
    id
    name
  }
}

paths: ["/topProducts/internal"]
