apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__filter_basic_query-6.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: doc
---
query {
  topProducts {
    type
    internal
  }
  me {
    id
  }
}

