apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__implementations_with_different_type_policies.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies: vec![\"read\".to_string()], result: doc, paths\n}"
---
query:

        query TestIssue {
          index(id: "1") {
            index
          }
        }
    
extracted_policies: {}
successful policies: []
filtered:

paths: ["/index"]
