apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__implementations_with_same_policies.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(), result: doc, paths\n}"
---
query:

      query {
        test
        itf {
          id
          other
        }
      }
    
extracted_policies: {}
successful policies: []
filtered:
{
  test
  itf {
    other
  }
}

paths: ["/itf/id"]
